it will add functional select box and display a message of disgust

--- a/index.html
+++ b/index.html
@@ -8,7 +8,25 @@
     <title>form-letter</title>
   </head>
 
-<body>
-</body>
+  <body>
+
+        <select class="form-control" id="beverage">
+          <option>Pick your drink!</option>
+          <option>Coffee</option>
+          <option>Tea</option>
+          <option>Kombucha</option>
+          <option>Water</option>
+        </select>
+
+      <div id="result">
+        <p>Wow, <span class="drinkresult"></span>? That's gross.</p>
+      </div>
+
+      <button id="survey" type="button" class="btn">Confirm your choice</button>
+
+
+
+      
+  </body>
 
 </html>
