add inital setup and first store choice with responsive reciept

--- a/index.html
+++ b/index.html
@@ -5,10 +5,34 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/scripts.js"></script>
-    <title>form-letter</title>
+    <title>Marktplace</title>
   </head>
 
 <body>
+  <div id="page">
+     <label for="person1">Enter your name</label>
+     <input id="person1" class="form-control" type="text">
+
+     <label for="person1">Enter your name</label>
+     <select class="form-control" id="head">
+       <option>sunhat </option>
+       <option>baseball hat</option>
+       <option>beanie</option>
+       <option>bow</option>
+       <option>tiara</option>
+     </select>
+
+
+
+         <button id="survey" type="button" class="btn">Confirm your choice</button>
+
+
+
+   </div>
+   <div id="result">
+     <p>Thanks For Your Purchase. Here is what you ordered</p>
+     <p><span class="colorheadresult"></span>  <span class="headresult"></span></p>
+   </div>
 </body>
 
 </html>
