--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <label for="person1">Enter your name</label>
      <input id="person1" class="form-control" type="text">
 
-     <label for="person1">Enter your name</label>
+     <label for="person1">Choose your headpiece</label>
      <select class="form-control" id="head">
        <option>sunhat </option>
        <option>baseball hat</option>
@@ -21,6 +21,25 @@
        <option>bow</option>
        <option>tiara</option>
      </select>
+
+     <div class="radio">
+  <label>
+    <input type="radio" name="flavor" value="red" checked>
+    Red
+  </label>
+</div>
+<div class="radio">
+  <label>
+    <input type="radio" name="flavor" value="yellow">
+    Yellow
+  </label>
+</div>
+<div class="radio">
+  <label>
+    <input type="radio" name="flavor" value="green">
+    Green
+  </label>
+</div>
 
 
 
@@ -30,7 +49,7 @@
 
    </div>
    <div id="result">
-     <p>Thanks For Your Purchase. Here is what you ordered</p>
+     <p>Thanks For Your Purchase. Here is what you ordered, <span class="nameresult"></span> </p>
      <p><span class="colorheadresult"></span>  <span class="headresult"></span></p>
    </div>
 </body>
